docs(core): enhance GC, memory, and concurrency documentation
Comprehensive updates to core platform documentation:

by-topic/core/gc/index.md:
- Added detailed GC algorithm comparison table with pause time/throughput
- Added GC memory layout diagrams for young/old generations
- Added detailed G1 GC architecture with Region-based design
- Added ZGC evolution timeline (JDK 11-26)
- Added Shenandoah GC evolution timeline
- Added JDK 26 G1 GC throughput improvements (JEP 522)
- Added JDK 26 Compact Object Headers (JEP 519)
- Added GC selection guide by scenario
- Added git commit history for GC improvements (2024-2026)

by-topic/core/memory/index.md:
- Added comprehensive JVM memory structure diagram
- Added detailed heap/stack/metaspace/direct memory sections
- Added object allocation process flow
- Added TLAB (Thread-Local Allocation Buffer) explanation
- Added object memory layout (Mark Word, Class Pointer, Fields)
- Added JDK 25 AOT cache memory benefits (JEP 483)
- Added JDK 26 Compact Object Headers (JEP 519)
- Added memory optimization best practices
- Added Compressed Oops and String Deduplication details

by-topic/concurrency/concurrency/index.md:
- Added comprehensive concurrency API timeline
- Added Thread/Runnable examples with lifecycle diagram
- Added Executor framework with ThreadPoolExecutor configuration
- Added Fork/Join framework for divide-and-conquer tasks
- Added CompletableFuture for compositional async programming
- Added concurrent collections (ConcurrentHashMap, CopyOnWriteArrayList, etc.)
- Added synchronization tools (CountDownLatch, CyclicBarrier, Semaphore)
- Added Virtual Threads (JEP 444) with architecture diagram
- Added Structured Concurrency (JEP 453/462) examples
- Added Scoped Values (JEP 446/506) vs ThreadLocal comparison
- Added JDK 25 Lazy Constants (JEP 526)
- Added JDK 26 Stable Values (JEP 502)
- Added Virtual Threads pinning issues and best practices
- Added git commit history for concurrency improvements

Data sources:
- Ope